fix footer; final alignment issues

--- a/components/Footer.module.scss
+++ b/components/Footer.module.scss
@@ -12,6 +12,8 @@
 
 .backToTop {
     font-family: 'SF-Pro-Display-Regular';
+    font-size: 1.25rem;
+    font-weight: 1rem;
 }
 
 .navbar {
@@ -55,7 +57,8 @@
     font-family: "SF-Pro-Display-Regular";
     display: flex;
     gap: 1rem;
-    font-size: 1rem;
+    font-size: 1.25rem;
+    font-weight: 1rem;
     line-height: 16px;
     color: white;
     margin-top: 1rem;
